<resources>
    <string name="app_name">rickAnMortyKotlin</string>
    <string name="precedent">Précédent</string>
    <string name="suivant">Suivant</string>
    <string name="numPage">1/34</string>
    <string name="todo">TODO</string>
    <string name="name">Name :</string>
    <string name="status">Status :</string>
    <string name="species">Species :</string>
    <string name="type">¬ Type :</string>
    <string name="gender">Gender :</string>
    <string name="origin">Origin :</string>
    <string name="location">Location :</string>
    <string name="image_character">Image Character</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="inscription">INSCRIPTION</string>
    <string name="connexion">CONNEXION</string>
    <string name="deconnexion">DECONNEXION</string>
    <string name="information_compte">Information Compte</string>
    <string name="email_gmail_com">email@something.com</string>
</resources>